gccida/g1/add_dependence
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_dependence/src/sched-deps.c:642:43: error: must use 'enum' tag to refer to type 'reg_note'
void  add_dependence( rtx insn, rtx elem, reg_note dep_type) 
                                          ^
                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_dependence/src/sched-deps.c:658:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note v19; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_dependence/src/sched-deps.c:702:34: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
if ( v20 == reverse_condition( ( rtx_code)v21) 
                                 ^~~~~~~~
                                 rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_dependence/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_dependence/src/sched-deps.c:702:43: error: expected ')'
if ( v20 == reverse_condition( ( rtx_code)v21) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_dependence/src/sched-deps.c:702:30: note: to match this '('
if ( v20 == reverse_condition( ( rtx_code)v21) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_dependence/src/sched-deps.c:704:17: error: invalid operands to binary expression ('struct rtx_def' and 'uint64' (aka 'unsigned long long'))
&& condition[1] == *( ( _QWORD *)v8 + 2) 
   ~~~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_dependence/src/sched-deps.c:763:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22 = ( __int64)insn[3]; 
                ^~~~~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_dependence/src/obj/sched-deps.o] Error 1
